implemented for loop in statement anayler